updates to improve small screen view

--- a/content/media/css/site.css
+++ b/content/media/css/site.css
@@ -77,6 +77,7 @@ footer{
     position: relative;
     bottom: 0;
     color: #fff;
+    border-top: 12px solid #D6D6C3;
 
 }
 
@@ -165,6 +166,7 @@ footer{
     background-color: #689868;
     padding: 0 12px;
     position: relative;
+    height: 100px
 }
 
 .banner h1{
@@ -269,8 +271,8 @@ section.content ul {
 section.sidebar {
     width: 300px;
     float: left;
-    padding-top: 50px;
-    padding-left: 100px
+    padding: 50px 0px 50px 50px;
+    height: 200px
 }
 
 section.sidebar ul {
